# phoengine

./: .gitignore  README.md
OpenglProjDay1/src/: Game.cpp
OpenglProjDay1/src/Opengl3d_win/include/Window/: OWindow.h
OpenglProjDay2/: CMakeLists.txt  Dependency.cmake
OpenglProjDay2/src/: Game.mm
OpenglProjDay2/src/Opengl3d_osx/source/Window/: OWindow.mm
OpenglProjDay2/src/Opengl3d_win/include/Window/: OWindow.h
OpenglProjDay3/: CMakeLists.txt  Swift.gitignore  VisualStudio.gitignore
OpenglProjDay3/src/: Game.h  main.mm
OpenglProjDay3/src/Metal_osx/include/Window/: OWindow.h
OpenglProjDay3/src/Metal_osx/source/Window/: OWindow.mm
OpenglProjDay3/src/Opengl3d_win/source/Window/: OWindow.cpp
OpenglProjDay4/android_engine_templete_without_lib/app/src/main/cpp/: main.cpp
OpenglProjDay5/engine/: CMakeLists.txt
OpenglProjDay5/engine/src/: main.mm
OpenglProjDay5/engine/src/Metal_osx/source/Core/: Game.mm
OpenglProjDay5/engine/src/Opengl_win/source/Window/: Window.cpp
OpenglProjDay6/android_engine_templete/app/src/main/cpp/: CMakeLists.txt
OpenglProjDay6/engine/: Dependency.cmake
OpenglProjDay6/engine/src/Metal_ios/include/Window/: Window.h
OpenglProjDay6/engine/src/Metal_ios/source/Core/: Game.mm
OpenglProjDay6/engine/src/Metal_ios/source/Graphic/: GraphicEngine.mm
OpenglProjDay6/engine/src/Metal_ios/source/Window/: Window.mm
OpenglProjDay6/ios_engine_templete/: LaunchScreen.storyboard  Main.storyboard
ProjDay1/: CMakeLists.txt  Dependency.cmake  day1.md
ProjDay1/src/: Game.cpp  Game.h
ProjDay1/src/Opengl3d_win/include/Window/: Window.h
ProjDay1/src/Opengl3d_win/source/Window/: OWindow.cpp  Window.cpp
ProjDay10/android_engine_templete/app/src/main/cpp/: CMakeLists.txt  main.cpp
ProjDay10/engine/: CMakeLists.txt  Dependency.cmake
ProjDay10/engine/demo/: Triangle.cpp  Triangle.h  shader.fx
ProjDay10/engine/src/DirectX11_win/include/Graphic/: GraphicEngine.h  ShaderProgram.h  VertexBuffer.h
ProjDay10/engine/src/DirectX11_win/source/Window/: Window.cpp
ProjDay10/engine/src/Opengl_win/source/Core/: Game.cpp
ProjDay10/engine/src/Opengl_win/source/Graphic/: ShaderProgram.cpp
ProjDay10/engine/src/gles_android/include/Core/: Game.h
ProjDay10/engine/src/gles_android/include/Window/: Window.h
ProjDay10/engine/src/gles_android/source/Core/: Game.cpp
ProjDay11/android_engine_templete/app/src/main/assets/: shader_ps.glsl
ProjDay11/engine/: CMakeLists.txt  Dependency.cmake
ProjDay11/engine/demo/: CMakeLists.txt  Triangle.cpp  Triangle.h  shader.metal  shader_ps.metal  shader_vs.glsl  shader_vs.metal
ProjDay11/engine/src/DirectX11_win/include/Graphic/: DeviceContext.h
ProjDay11/engine/src/DirectX11_win/source/Graphic/: ShaderProgram.cpp
ProjDay11/engine/src/Metal_ios/include/Core/: Game.h
ProjDay11/engine/src/Metal_ios/include/Graphic/: DeviceContext.h  GraphicEngine.h  ShaderProgram.h
ProjDay11/engine/src/Metal_ios/source/Core/: Game.mm
ProjDay11/engine/src/Metal_ios/source/Graphic/: GraphicEngine.mm  ShaderProgram.mm  VertexBuffer.mm
ProjDay11/engine/src/Metal_osx/include/: Vec3.h  Vec4.h
ProjDay11/engine/src/Metal_osx/include/Core/: Game.h
ProjDay11/engine/src/Metal_osx/include/Graphic/: GraphicEngine.h  ShaderProgram.h  VertexBuffer.h
ProjDay11/engine/src/Metal_osx/source/Core/: Game.mm
ProjDay11/engine/src/Metal_osx/source/Graphic/: DeviceContext.mm  GraphicEngine.mm  ShaderProgram.mm
ProjDay11/engine/src/Metal_osx/source/Window/: Window.mm
ProjDay11/engine/src/Opengl_win/include/Graphic/: GraphicEngine.h
ProjDay11/engine/src/Opengl_win/source/Graphic/: DeviceContext.cpp  VertexBuffer.cpp
ProjDay11/engine/src/gles_android/: CMakeLists.txt
ProjDay11/engine/src/gles_android/include/: Vec3.h
ProjDay11/engine/src/gles_android/include/Graphic/: DeviceContext.h  GraphicEngine.h  ShaderProgram.h  VertexBuffer.h
ProjDay11/engine/src/gles_android/source/Graphic/: DeviceContext.cpp  GraphicEngine_android.cpp  ShaderProgram.cpp
ProjDay11/engine/src/gles_android/source/Window/: Window.cpp
ProjDay11/ios_engine_templete/: CMakeLists.txt
ProjDay2/: CMakeLists.txt  Dependency.cmake  README.md
ProjDay2/src/: Game.cpp  Game.h  Game.mm
ProjDay2/src/Metal_osx/include/Window/: Window.h
ProjDay2/src/Metal_osx/source/Window/: OWindow.mm  Window.mm
ProjDay2/src/Opengl_win/include/Window/: Window.h
ProjDay2/src/Opengl_win/source/Window/: OWindow.cpp  Window.cpp
ProjDay3/: CMakeLists.txt  Dependency.cmake
ProjDay3/src/: Game.cpp  Game.h  Game.mm
ProjDay3/src/Metal_osx/include/Graphic/: GraphicEngine.h
ProjDay3/src/Metal_osx/include/Window/: Window.h
ProjDay3/src/Metal_osx/source/Graphic/: GraphicEngine.mm
ProjDay3/src/Metal_osx/source/Window/: Window.mm
ProjDay3/src/Opengl_win/include/Window/: Window.h
ProjDay3/src/Opengl_win/source/Graphic/: GraphicEngine.cpp
ProjDay3/src/Opengl_win/source/Window/: Window.cpp
ProjDay4/android_engine_templete_without_lib/app/src/main/cpp/: CMakeLists.txt
ProjDay5/android_engine_templete/app/: build.gradle
ProjDay5/engine/src/Metal_osx/include/Graphic/: GraphicEngine.h
ProjDay5/engine/src/Opengl_win/source/Graphic/: GraphicEngine_win32.cpp
ProjDay6/engine/: CMakeLists.txt
ProjDay6/engine/src/: main.cpp
ProjDay6/engine/src/gles_android/: CMakeLists.txt
ProjDay6/engine/src/gles_android/include/Window/: OWindow.h
ProjDay6/ios_engine_templete/: AppDelegate.m  CppInterface.mm  ViewController.h  ViewController.m  ios.cmake
ProjDay7/android_engine_templete/app/src/main/: AndroidManifest.xml
ProjDay7/engine/: CMakeLists.txt  Dependency.cmake
ProjDay7/ios_engine_templete/: CMakeLists.txt
ProjDay8/engine/: CMakeLists.txt  Dependency.cmake
ProjDay8/engine/demo/: CMakeLists.txt  Triangle.cpp  Triangle.h  shader.fx
ProjDay8/engine/src/DirectX11_win/include/Graphic/: GraphicEngine.h  Shader.h
ProjDay8/engine/src/DirectX11_win/source/Graphic/: GraphicEngine_win32.cpp  Shader.cpp
ProjDay8/engine/src/gles_android/source/Core/: Game.cpp
ProjDay9/engine/demo/: Triangle.cpp
ProjDay9/engine/src/gles_android/include/: Vec4.h
(+32 files in other folders)
